add href's to links

--- a/week2.html
+++ b/week2.html
@@ -16,9 +16,9 @@
 <p>Below you will find a number of links which will help you learn a bit more about what Polytechnic has to offer.</p>
 
 <ul>
-    <li><a>About the Polytechnic campus</a></li>
-    <li><a>Open Device Lab</a></li>
-    <li><a>The Information Technology Major</a></li>
+    <li><a href="polycampus.html">About the Polytechnic campus</a></li>
+    <li><a href="devicelab.html">Open Device Lab</a></li>
+    <li><a href="itprog.html">The Information Technology Major</a></li>
 </ul>
 
 
