--- a/devicelab.html
+++ b/devicelab.html
@@ -15,6 +15,14 @@
     engage those working with internet-connected devices, and ultimately work towards improving web applications on the
     whole.</p>
 
-<p><a href="#">Click here</a> to learn more!</p>
+<p><a href="http://device.lab.asu.edu/">Click here</a> to learn more!</p>
+
+<p>
+    <a href="week2.html">Tour Home</a> |
+    <a href="polycampus.html">About the Polytechnic Campus</a> |
+    <a href="devicelab.html">Open Device Lab</a> |
+    <a href="itprog.html">The Information Technology Major</a>
+</p>
+
 </body>
 </html>
