--- a/itprog.html
+++ b/itprog.html
@@ -8,13 +8,21 @@
 <h1>The Information Technology Program</h1>
 
 <p>Information Technology or IT for short is a wide-reaching field focused on the usage, management, and creation of
-   computers and other electronic systems. Students within the IT program here at ASU learn the ins and outs of such
-   systems, including the hardware that they are based on, the software used to facilitate data management, and more. The
-   IT program at Polytechnic also allows students to focus on various aspects of the industry, such as networking, cloud
-   computing, and computer security.</p>
+    computers and other electronic systems. Students within the IT program here at ASU learn the ins and outs of such
+    systems, including the hardware that they are based on, the software used to facilitate data management, and more. The
+    IT program at Polytechnic also allows students to focus on various aspects of the industry, such as networking, cloud
+    computing, and computer security.</p>
 
 <p></p>
 
-<p><a href="#">Click here</a> to learn more!</p>
+<p><a href="http://poly.engineering.asu.edu/it/">Click here</a> to learn more!</p>
+
+<p>
+    <a href="week2.html">Tour Home</a> |
+    <a href="polycampus.html">About the Polytechnic Campus</a> |
+    <a href="devicelab.html">Open Device Lab</a> |
+    <a href="itprog.html">The Information Technology Major</a>
+</p>
+
 </body>
 </html>
