--- a/polycampus.html
+++ b/polycampus.html
@@ -8,11 +8,19 @@
 <h1>General Campus Information</h1>
 
 <p>One of the four main ASU locations found in Arizona, the Polytechnic Campus was originally founded in the fall
-   of 1996. Constructed on land previously occupied by Williams Air Force Base, the campus would open its doors that
-   same year. Today, the Polytechnic Campus is home to over 8,000 students studying in various technology-related
-   fields. Students within the many different programs offered at the Polytechnic School are actively engaged in their
-   fields of study, with research, software development, and more all taking place within on-campus facilities.</p>
+    of 1996. Constructed on land previously occupied by Williams Air Force Base, the campus would open its doors that
+    same year. Today, the Polytechnic Campus is home to over 8,000 students studying in various technology-related
+    fields. Students within the many different programs offered at the Polytechnic School are actively engaged in their
+    fields of study, with research, software development, and more all taking place within on-campus facilities.</p>
 
-<p><a href="#">Click here</a> for more detailed information about the campus.</p>
+<p><a href="https://poly.engineering.asu.edu/">Click here</a> for more detailed information about the campus.</p>
+
+<p>
+    <a href="week2.html">Tour Home</a> |
+    <a href="polycampus.html">About the Polytechnic Campus</a> |
+    <a href="devicelab.html">Open Device Lab</a> |
+    <a href="itprog.html">The Information Technology Major</a>
+</p>
+
 </body>
 </html>
