--- a/week2.html
+++ b/week2.html
@@ -12,8 +12,8 @@
 <br>
 
 <p>Our campus is home to a plethora of technology-related majors, including everything from computer science to many
-   different engineering degress. ASU Polytechnic is also home to a fully featured start-up lab for those of you who
-   want to get a jump-start on projects, as well as many other facilities.</p>
+    different engineering degress. ASU Polytechnic is also home to a fully featured start-up lab for those of you who
+    want to get a jump-start on projects, as well as many other facilities.</p>
 
 <br>
 <br>
@@ -26,6 +26,12 @@
     <li><a href="itprog.html">The Information Technology Major</a></li>
 </ul>
 
+<p>
+    <a href="week2.html">Tour Home</a> |
+    <a href="polycampus.html">About the Polytechnic Campus</a> |
+    <a href="devicelab.html">Open Device Lab</a> |
+    <a href="itprog.html">The Information Technology Major</a>
+</p>
 
 </body>
 </html>
